Added basic page structure and header

--- a/index.html
+++ b/index.html
@@ -6,9 +6,72 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Shift.io</title>
     <link rel="stylesheet" href="/css/styles.css" type="text/css">
-    <link href="https://fonts.googleapis.com/css?family=Nunito:300,400,400i,700,900&display=swap" rel="stylesheet">
-  </head>
+    <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900&display=swap" rel="stylesheet">  </head>
   <body>
-    <h1>Hello</h1>
+    <header>
+      <img src="./images/shift-logo.png" alt="Shift.io logo">
+      <h1>SHIFT.IO</h1>
+    </header>
+    <nav>
+      <ul>
+        <li>Sign Up</li>
+        <li>About Us</li>
+        <li>Blog & News</li>
+        <li>Careers</li>
+      </ul>
+    </nav>
+    <section>
+      <section>
+        <h3>Sign up to keep shifting</h3>
+        <form>
+          <input type="text" name="fname" placeholder="First name">
+          <input type="text" name="lname" placeholder="Last name">
+          <input type="text" name="email" placeholder="Email">
+          <input type="button" value="Subscribe">
+        </form>
+      </section>
+      <div>
+        <h2>ABOUT US</h1>
+      </div>
+      <h4>
+        Our Mission
+      </h4>
+      <p>
+        A wonderful serenity has taken possession of my 
+        entire soul, like these sweet mornings of spring 
+        which I enjoy with my whole heart. I am alone, 
+        and feel the charm of existence in this spot, 
+        which was created for the bliss of souls like 
+        mine.
+      </p>
+      <h4>
+        About
+      </h4>
+      <p>
+          A wonderful serenity has taken possession of my 
+          entire soul, like these sweet mornings of spring 
+          which I enjoy with my whole heart. I am alone, 
+          and feel the charm of existence in this spot, 
+          which was created for the bliss of souls like 
+          mine.
+        </p>
+      <ul>
+        <li>
+            Which was created for the bliss of souls like mine.
+        </li>
+        <li>
+            Which was created for the bliss of souls like mine.
+        </li>
+        <li>
+            Which was created for the bliss of souls like mine.
+        </li>
+      </ul>
+    </section>
+    <section>
+      
+    </section>
+    <section>
+      
+    </section>
   </body>
 </html>
