Changed button to image

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
       </p>
       <h3>Current Vacancies</h3>
       <input type="text" name="search" placeholder="Search">
-      <input type="button">
+      <img src="images/search.png" alt="Search icon">
       <div class="vacancy-container">
           <div class="vacancy-item">
             <p><strong>Accounts Payable</strong></p>
