Some styling changes

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900&display=swap" rel="stylesheet">  </head>
   <body>
     <header>
-      <img src="./images/shift-logo.png" alt="Shift.io logo">
+      <img class="login-img" src="./images/login.png" alt="Login icon">
+      <img class="logo-img" src="./images/shift-logo.png" alt="Shift.io logo">
       <h1>SHIFT.IO</h1>
     </header>
     <nav>
@@ -21,7 +22,7 @@
       </ul>
     </nav>
     <section class="sign-up-section">
-        <p class="sign-up-text">Sign up to keep shifting</p>
+        <p class="sign-up-text">Sign up for your free Shift.io account</p>
         <form>
           <input type="text" name="fname" placeholder="First name">
           <input type="text" name="lname" placeholder="Last name">
