Added interactivity with JS

--- a/index.html
+++ b/index.html
@@ -17,22 +17,19 @@
     </header>
     <nav>
       <ul>
-        <li>Sign Up</li>
-        <li>About Us</li>
-        <li>Blog & News</li>
-        <li>Careers</li>
+
       </ul>
     </nav>
-    <section class="sign-up-section">
+    <section class="sign-up-section" data-section-title="Sign Up" id="sign-up">
         <p class="sign-up-text">Sign up for your free Shift.io account</p>
         <form>
           <input type="text" name="fname" placeholder="First name">
           <input type="text" name="lname" placeholder="Last name">
           <input type="text" name="email" placeholder="Email">
           <input type="button" value="Sign up">
-        </form>      
+        </form>
     </section>
-    <section class="about-section">
+    <section class="about-section" data-section-title="About Us" id="about">
       <div class="section-banner">
         <h2>ABOUT US</h1>
         <span class="underline"></span>
@@ -83,7 +80,7 @@
         vitae ultricies leo integer malesuada nunc. 
       </p>
     </section>
-    <section class="blog-section">
+    <section class="blog-section" data-section-title="Blog & News" id="blog">
       <div class="section-banner">
         <h2>BLOG & NEWS</h1>
         <span class="underline"></span>
@@ -128,7 +125,7 @@
       </div>
       <input type="button" value="Subscribe">
     </section>
-    <section class="careers-section">
+    <section class="careers-section" data-section-title="Careers" id="careers">
       <div class="section-banner">
         <h2>CAREERS</h1>
         <span class="underline"></span>
@@ -175,4 +172,5 @@
         <p>Shift.io &copy 2020</p>
     </footer>
   </body>
+  <script src="./js/app.js"></script>
 </html>
